--- a/index.html
+++ b/index.html
@@ -5,48 +5,49 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Document</title>
+   <link rel="stylesheet" href="./style.css">
+   <title>Nora Zheng | JavaScript 30</title>
 </head>
 
 <body>
    <header>
       <h1>Hi, I'm Nora!</h1>
       <p>
-         Here's a list of my finished projects following Wes Bos's JavaScript 30 Day Challenge.
+         Here's a list of my completed Wes Bos's JavaScript 30 Day Challenges.
       </p>
    </header>
    <main>
       <ol class="projects">
-         <li class="project"><a href="./js-drum-kit/drum-kit.html">JavaScript Drum Kit</a></li>
-         <li class="project"><a href="./css-clock.html">CSS Clock</a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
-         <li class="project"><a href=""></a></li>
+         <li class="project"><a href="./js-drum-kit/drum-kit.html" target="_blank">JavaScript Drum Kit</a></li>
+         <li class="project"><a href="./css-clock.html" target="_blank">CSS Clock</a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
+         <li class="project"><a href="" target="_blank"></a></li>
       </ol>
    </main>
    <footer>
