--- a/index.html
+++ b/index.html
@@ -2,57 +2,57 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="./style.css">
-   <title>Nora Zheng | JavaScript 30</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="./style.css">
+	<title>Nora Zheng | JavaScript 30</title>
 </head>
 
 <body>
-   <header>
-      <h1>Hi, I'm Nora!</h1>
-      <p>
-         Here's a list of my completed Wes Bos's JavaScript 30 Day Challenges.
-      </p>
-   </header>
-   <main>
-      <ol class="projects">
-         <li class="project"><a href="./js-drum-kit/drum-kit.html" target="_blank">JavaScript Drum Kit</a></li>
-         <li class="project"><a href="./css-clock.html" target="_blank">CSS Clock</a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-         <li class="project"><a href="" target="_blank"></a></li>
-      </ol>
-   </main>
-   <footer>
+	<header>
+		<h1>Hi, I'm Nora!</h1>
+		<p>
+			Here's a list of my completed Wes Bos's JavaScript 30 Day Challenges.
+		</p>
+	</header>
+	<main>
+		<ol class="projects">
+			<li class="project"><a href="./js-drum-kit/drum-kit.html" target="_blank">JavaScript Drum Kit</a></li>
+			<li class="project"><a href="./css-clock.html" target="_blank">CSS Clock</a></li>
+			<li class="project"><a href="./css-variables.html" target="_blank">CSS Variables</a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="" target="_blank"></a></li>
+		</ol>
+	</main>
+	<footer>
 
-   </footer>
+	</footer>
 </body>
 
 </html>
