array-cardio added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<li class="project"><a href="./js-drum-kit/drum-kit.html" target="_blank">JavaScript Drum Kit</a></li>
 			<li class="project"><a href="./css-clock.html" target="_blank">CSS Clock</a></li>
 			<li class="project"><a href="./css-variables.html" target="_blank">CSS Variables</a></li>
-			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="./array-cardio.html" target="_blank">Array Cardio</a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
