--- a/array-cardio.html
+++ b/array-cardio.html
@@ -45,9 +45,7 @@
 		// Array.prototype.sort()
 		// 3. Sort the inventors by birthdate, oldest to youngest
 
-		const sortedByBirthYear = inventors.sort((inventor1, inventor2) => inventor1.year <= inventor2.year ? -1 : 1)
-
-		console.table(inventors)
+		const sortedByBirthYear = inventors.sort((inventor1, inventor2) => inventor1.year - inventor2.year)
 		console.table(sortedByBirthYear)
 		// Array.prototype.reduce()
 		// 4. How many years did all the inventors live?
@@ -59,11 +57,8 @@
 		console.log(totalYears);
 		// 5. Sort the inventors by years lived
 
-		const sortedByYearsLived = inventors.sort(function () {
-			const age1 = inventor1.passed - inventor1.year
-			const age2 = inventor2.passed - inventor2.year
-			age1 > age2 ? 1 : -1
-		})
+		const sortedByYearsLived = inventors.sort((inventor1, inventor2) => inventor1.passed - inventor1.year - inventor2.passed + inventor2.year)
+
 
 		console.table(sortedByYearsLived);
 
@@ -74,10 +69,24 @@
 		// 7. sort Exercise
 		// Sort the people alphabetically by last name
 
+		const sortedByLastName = people.sort((person1, person2) => {
+			return person1.split(', ')[0] > person2.split(', ')[0]
+		})
+		console.table(sortedByLastName)
 		// 8. Reduce Exercise
 		// Sum up the instances of each of these
 		const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
 
+
+		const vehicles = data.reduce((object, current) => {
+			if (!object[current]) {
+				object[current] = 0
+			}
+			object[current] += 1
+			return object
+		}, {})
+
+		console.log(vehicles);
 	</script>
 </body>
 
