flex panel gallery finished

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		<ol class="projects">
 			<li class="project"><a href="./js-drum-kit/drum-kit.html" target="_blank">JavaScript Drum Kit</a></li>
 			<li class="project"><a href="./css-clock.html" target="_blank">CSS Clock</a></li>
-			<li class="project"><a href="./css-variables.html" target="_blank">CSS Variables</a></li>
+			<li class="project"><a href="./css-photo-filter.html" target="_blank">CSS Photo Filter</a></li>
 			<li class="project"><a href="./array-cardio.html" target="_blank">Array Cardio</a></li>
 			<li class="project"><a href="./array-cardio-two.html" target="_blank">Array Cardio Two</a></li>
-			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="./flex-panel-gallery.html" target="_blank">Flex Panel Gallery</a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
