--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<li class="project"><a href="./array-cardio-two.html" target="_blank">Array Cardio Two</a></li>
 			<li class="project"><a href="./flex-panel-gallery.html" target="_blank">Flex Panel Gallery</a></li>
 			<li class="project"><a href="./konami-code.html" target="_blank">Konami Code (Key Detection)</a></li>
-			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="./type-ahead.html" target="_blank">Ajax Type Ahead</a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
