--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<li class="project"><a href="./konami-code.html" target="_blank">Konami Code (Key Detection)</a></li>
 			<li class="project"><a href="./type-ahead.html" target="_blank">Ajax Type Ahead</a></li>
 			<li class="project"><a href="./slide-in-on-scroll.html" target="_blank">Slide in on Scroll</a></li>
-			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="./local-storage.html" target="_blank">Local Storage</a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
