set and get from local storage

--- a/local-storage.html
+++ b/local-storage.html
@@ -127,7 +127,7 @@
 	<script>
 		const addItems = document.querySelector('.add-items');
 		const itemsList = document.querySelector('.plates');
-		const items = [];
+		const items = JSON.parse(localStorage.getItem('items')) || [];
 
 		function addItem(e) {
 			e.preventDefault();
@@ -139,6 +139,7 @@
 			// reset the form
 			items.push(item)
 			displayList(items, itemsList)
+			localStorage.setItem('items', JSON.stringify(items))
 			this.reset()
 		}
 
@@ -154,6 +155,7 @@
 		}
 		addItems.addEventListener('submit', addItem)
 
+		displayList(items, itemsList)
 	</script>
 
 
