added Hold Shift to Check Multiple Checkboxes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 			<li class="project"><a href="./type-ahead.html" target="_blank">Ajax Type Ahead</a></li>
 			<li class="project"><a href="./slide-in-on-scroll.html" target="_blank">Slide in on Scroll</a></li>
 			<li class="project"><a href="./local-storage.html" target="_blank">Local Storage</a></li>
-			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="./hold-shift-to-check-multiple-checkboxes.html" target="_blank">Hold Shift to Check
+					Multiple Checkboxes</a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
