added Event Capture, Propagation, Bubbling and Once

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 			<li class="project"><a href="./local-storage.html" target="_blank">Local Storage</a></li>
 			<li class="project"><a href="./hold-shift-to-check-multiple-checkboxes.html" target="_blank">Hold Shift to Check
 					Multiple Checkboxes</a></li>
-			<li class="project"><a href="" target="_blank"></a></li>
+			<li class="project"><a href="./event-capture-propagation-bubbling-once.html" target="_blank">Event Capture,
+					Propagation, Bubbling and Once</a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
 			<li class="project"><a href="" target="_blank"></a></li>
